Minor improvements to in memory cache